--- a/ch01_object_dependency/pom.xml
+++ b/ch01_object_dependency/pom.xml
@@ -13,19 +13,30 @@
   <properties>
   	<java.version>1.8</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <springframework.version>4.3.14.RELEASE</springframework.version>
   </properties>
 
   <dependencies>
+  	<!-- 스프링 프레임워크 -->
+  	<dependency>
+	    <groupId>org.springframework</groupId>
+	    <artifactId>spring-context</artifactId>
+	    <version>${springframework.version}</version>
+	</dependency>
+  	
+    <!-- MySQL JDBC 컨넥터 -->
+    <dependency>
+    	<groupId>mysql</groupId>
+    	<artifactId>mysql-connector-java</artifactId>
+    	<version>5.1.38</version>
+    </dependency>
+    
+  	<!-- 테스트 라이브러리 -->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.12</version>
       <scope>test</scope>
-    </dependency>
-    <dependency>
-    	<groupId>mysql</groupId>
-    	<artifactId>mysql-connector-java</artifactId>
-    	<version>5.1.38</version>
     </dependency>
   </dependencies>
 </project>
