--- a/ch01_object_dependency/pom.xml
+++ b/ch01_object_dependency/pom.xml
@@ -23,6 +23,11 @@
 	    <artifactId>spring-context</artifactId>
 	    <version>${springframework.version}</version>
 	</dependency>
+    <dependency>
+    	<groupId>org.springframework</groupId>
+    	<artifactId>spring-jdbc</artifactId>
+    	<version>${springframework.version}</version>
+    </dependency>
   	
     <!-- MySQL JDBC 컨넥터 -->
     <dependency>
